# cnpy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example1.cpp  mat2npz  npy2mat  npz2mat
.github/workflows/: nightly-build.yml
cmake/: cnpyConfig.cmake.in
include/: cnpy.h  cnpy.hpp
include/cnpy/: cnpy.hpp
src/: cnpy.cpp
test/: example1.cpp  test.cpp
test/data/: test_load.npz
